# conversation-hub

./: .gitignore  README.md  handover.md  pyproject.toml  to-do.md
docs/: analyze-cli.md  browse-cli.md  export-cli.md  import-architecture.md  import-cli.md  search-cli.md
docs/plans/: 2026-03-15-import-cli.md  2026-03-15-ingestion-foundation.md  2026-03-16-analysis-cli.md  2026-03-16-codex-importer.md  2026-03-16-end-to-end-interactive-workflow.md  2026-03-16-interactive-browse-cli.md  2026-03-16-interactive-cli-polish.md  2026-03-16-normalization-pipeline.md  2026-03-16-search-cli.md  2026-03-16-sqlite-storage.md
logs/: 2026-03-16.md
src/conversation_hub/: cli.py
src/conversation_hub/actions/: __init__.py  base.py
src/conversation_hub/connectors/: __init__.py  base.py  file_exports.py  local_state.py  registry.py
src/conversation_hub/interactive/: __init__.py  browse.py  workflow.py
src/conversation_hub/models/: __init__.py  schema.py
src/conversation_hub/pipelines/: __init__.py  analyze_pipeline.py  import_pipeline.py
src/conversation_hub/storage/: __init__.py  json_export.py  json_import.py  sqlite_search.py  sqlite_store.py
tests/: test_analysis_pipeline.py  test_cli.py  test_connectors.py  test_import_pipeline.py  test_interactive_browse.py  test_interactive_workflow.py  test_schema.py  test_storage_json_import.py  test_storage_serialization.py  test_storage_sqlite.py  test_storage_sqlite_search.py
